# understory

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/benches/: index_commit_dirty.rs  property.rs  style_matching.rs  timeline_model.rs  ui_box_tree.rs
docs/: issue_understory_display.md  review_2026_06_state_and_strategy.md
examples/: Cargo.toml  README.md
examples/examples/: basic_present.rs  focus_basics.rs  outline_virtual_list.rs  overstory_list_basics.rs  overstory_showcase.rs  overstory_visual_demo.rs  presentation_properties.rs  property_binding_loop.rs  responder_box_tree.rs  style_subject_walk.rs  transcript_agent_run.rs  transcript_tail_anchored.rs  transcript_virtual_list.rs
examples/src/: claude_api.rs  lib.rs  llm_api.rs  overstory_display.rs
overstory/: Cargo.toml  README.md
overstory/src/: built_in_styles.rs  compose.rs  display.rs  dock.rs  element.rs  lib.rs  properties.rs  runtime.rs  scene.rs  semantics.rs  surface.rs  ui.rs  widget.rs
overstory/src/widgets/: button.rs  divider.rs  mod.rs  scroll_view.rs  spinner.rs  splitter.rs  text_block.rs  text_input.rs  tooltip.rs
overstory_inspector/src/: lib.rs  tree.rs
overstory_transcript/src/: view.rs
overstory_tree/src/: tree.rs
plans/: overstory_authoring_plan.md  overstory_layout_hardening_plan.md  understory_display_plan.md  understory_transcript_plan.md
understory_animation/: Cargo.toml  README.md
understory_animation/src/: effect.rs  instance.rs  lib.rs  math.rs  playback.rs  stack.rs  tests.rs  timing.rs
understory_animation_timeline/: Cargo.toml  README.md
understory_animation_timeline/src/: lib.rs  manual.rs  tests.rs  time.rs  timeline.rs
understory_axis/: Cargo.toml  README.md
understory_axis/src/: lib.rs
understory_box_decoration/: CHANGELOG.md  Cargo.toml  README.md
understory_box_decoration/src/: contour.rs  edges.rs  geometry.rs  lib.rs  math.rs  paint.rs  path.rs  radii.rs  shape.rs  side.rs  style.rs  util.rs
understory_box_tree/: Cargo.toml  README.md
understory_box_tree/src/: damage.rs  lib.rs  tree.rs  types.rs
understory_dirty/: README.md
understory_dirty/src/: drain.rs  drain_builder.rs  graph.rs  intern.rs  lib.rs  policy.rs  tracker.rs
understory_display/: Cargo.toml  README.md
understory_display/src/: builder.rs  ids.rs  item.rs  lib.rs  list.rs  text.rs  tree.rs
understory_event_state/: README.md
understory_event_state/src/: click.rs
understory_focus/: README.md
understory_focus/src/: lib.rs
understory_focus/src/adapters/: box_tree.rs
understory_graph_view/: Cargo.toml  README.md
understory_graph_view/src/: compatibility.rs  element.rs  graph.rs  lib.rs  projection.rs  revision.rs
understory_guide/: Cargo.toml  README.md
understory_guide/src/: lib.rs
understory_index/: Cargo.toml  README.md
understory_index/src/: index.rs
understory_index/src/backends/: bvh.rs  grid.rs  rtree.rs
understory_inspector/: README.md
understory_inspector/src/: inspector.rs
understory_motion/: Cargo.toml  README.md
understory_motion/src/: color.rs  easing.rs  lib.rs  math.rs  physics.rs  transform.rs  transition.rs  value.rs
understory_node_graph/: Cargo.toml  README.md
understory_node_graph/src/: arena.rs  compatibility.rs  computed.rs  element.rs  graph.rs  ids.rs  invalidation.rs  lib.rs  observe.rs  projection.rs  revision.rs  routing.rs  session.rs
understory_outline/: README.md
understory_precise_hit/: README.md
understory_precise_hit/src/: lib.rs
understory_presentation/: Cargo.toml  README.md
understory_presentation/src/: lib.rs  store.rs
understory_presentation/src/primitive/: image.rs  mod.rs  path.rs  surface.rs  text.rs
understory_presentation_properties/: CHANGELOG.md  Cargo.toml  README.md
understory_presentation_properties/src/: lib.rs  surface.rs
understory_property/: Cargo.toml  README.md
understory_property/src/: lib.rs  metadata.rs  object.rs  registry.rs  store.rs
understory_property_binding/: Cargo.toml  README.md
understory_property_binding/src/: endpoint.rs  error.rs  host.rs  lib.rs  report.rs  set.rs  value_source.rs
understory_responder/: README.md
understory_responder/src/: dispatcher.rs  lib.rs  router.rs  types.rs
understory_selection/: README.md
understory_selection/src/: lib.rs
understory_selection/tests/: selection.rs
understory_style/: Cargo.toml  README.md
understory_style/src/: lib.rs  matcher.rs  resolve.rs  selector.rs  selectors.rs  style.rs  stylesheet.rs  vocabulary.rs
understory_tiling/: CHANGELOG.md  Cargo.toml  README.md
understory_tiling/src/: frame.rs  ids.rs  interaction.rs  lib.rs  model.rs  ops.rs  policy.rs  snapshot.rs  tests.rs  tree.rs  util.rs
understory_timeline_model/: Cargo.toml  README.md
understory_timeline_model/src/: doc.rs  error.rs  id.rs  lib.rs  record.rs  selection.rs  tests.rs
understory_timing/: CHANGELOG.md  Cargo.toml  README.md
understory_timing/src/: lib.rs
understory_transcript/: Cargo.toml  README.md
understory_transcript/src/: body.rs  entry.rs  ids.rs  lib.rs  status.rs  transcript.rs
understory_view2d/: CHANGELOG.md  README.md
understory_view2d/src/: lib.rs  modes.rs  validation.rs  viewport1d.rs  viewport2d.rs
understory_virtual_list/: CHANGELOG.md  Cargo.toml  README.md
understory_virtual_list/src/: lib.rs  model.rs  sparse.rs  tail_anchored.rs  virtual_list.rs
