[workspace]
resolver = "2"
members = [
  "understory_axis",
  "understory_property_binding",
  "understory_guide",
  "understory_index",
  "understory_box_tree",
  "understory_focus",
  "understory_inspector",
  "understory_outline",
  "understory_presentation",
  "understory_precise_hit",
  "understory_property",
  "understory_responder",
  "understory_selection",
  "understory_style",
  "understory_timing",
  "understory_transcript",
  "understory_view2d",
  "understory_virtual_list",
  "understory_event_state",
  "benches",
  "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/forest-rs/understory"

[workspace.dependencies]
# Kurbo supports no_std via its `libm` feature. Disable default features here and
# let member crates opt into `std` or `libm` explicitly via their own features.
kurbo = { version = "0.13.0", default-features = false }
bitflags = "2.10.0"
hashbrown = { version = "0.17.0", default-features = false, features = [
  "default-hasher",
] }
invalidation = "0.2.0"
parlance = { version = "0.1.0", default-features = false }
peniko = { version = "0.6.1", default-features = false }
smallvec = { version = "1.13.2", default-features = false }

# Internal crate dependencies are centralized here so path dependencies carry
# the version requirements needed for packaging.
understory_axis = { version = "0.1.0", path = "understory_axis", default-features = false }
understory_property_binding = { version = "0.1.0", path = "understory_property_binding", default-features = false }
understory_box_tree = { version = "0.0.1", path = "understory_box_tree", default-features = false }
understory_event_state = { version = "0.1.0", path = "understory_event_state", default-features = false }
understory_focus = { version = "0.1.0", path = "understory_focus", default-features = false }
understory_guide = { version = "0.1.0", path = "understory_guide", default-features = false }
understory_index = { version = "0.0.1", path = "understory_index", default-features = false }
understory_inspector = { version = "0.1.0", path = "understory_inspector", default-features = false }
understory_outline = { version = "0.1.0", path = "understory_outline", default-features = false }
understory_presentation = { version = "0.1.0", path = "understory_presentation", default-features = false }
understory_precise_hit = { version = "0.1.0", path = "understory_precise_hit", default-features = false }
understory_property = { version = "0.1.0", path = "understory_property", default-features = false }
understory_responder = { version = "0.1.0", path = "understory_responder", default-features = false }
understory_selection = { version = "0.1.0", path = "understory_selection", default-features = false }
understory_style = { version = "0.1.0", path = "understory_style", default-features = false }
understory_timing = { version = "0.1.2", path = "understory_timing", default-features = false }
understory_transcript = { version = "0.1.0", path = "understory_transcript", default-features = false }
understory_view2d = { version = "0.1.0", path = "understory_view2d", default-features = false }
understory_virtual_list = { version = "0.1.1", path = "understory_virtual_list", default-features = false }

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v7
rust.unsafe_code = "deny"
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.default_trait_access = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[profile.ci]
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.ci.package."*"]
debug-assertions = true
