[package]
name = "understory_examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
overstory = { path = "../overstory" }
understory_display = { path = "../understory_display", features = ["std"] }
imaging = { git = "https://github.com/forest-rs/imaging", rev = "999b356f7f2e043292e3c649e1eb803374c347ee", features = ["std"] }
imaging_vello_hybrid = { git = "https://github.com/forest-rs/imaging", rev = "999b356f7f2e043292e3c649e1eb803374c347ee" }
pollster = "0.4.0"
wgpu = { version = "28.0.0", default-features = false, features = ["std", "wgsl"] }
understory_responder = { path = "../understory_responder", features = [
  "box_tree_adapter",
  "hit2d_adapter",
  "std",
] }
kurbo = { workspace = true, default-features = true }
peniko = { workspace = true, default-features = true }
understory_box_tree = { path = "../understory_box_tree" }
understory_focus = { path = "../understory_focus" }
understory_index = { path = "../understory_index" }
understory_precise_hit = { path = "../understory_precise_hit" }
understory_event_state = { path = "../understory_event_state" }
understory_inspector = { path = "../understory_inspector" }
understory_outline = { path = "../understory_outline" }
understory_style = { path = "../understory_style" }
understory_transcript = { path = "../understory_transcript" }
understory_virtual_list = { path = "../understory_virtual_list" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
ui-events-winit = "0.3.0"
winit = "0.30.10"
