[package]
name = "understory_examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
invalidation.workspace = true
kurbo = { workspace = true, default-features = true }
understory_box_tree = { workspace = true, features = ["std"] }
understory_event_state = { workspace = true, features = [
  "click",
  "drag",
  "std",
] }
understory_focus = { workspace = true, features = ["std"] }
understory_index = { workspace = true, features = ["backend_grid"] }
understory_inspector = { workspace = true, features = ["std"] }
understory_outline = { workspace = true, features = ["std"] }
understory_presentation = { workspace = true, features = ["std"] }
understory_precise_hit = { workspace = true, features = ["std"] }
understory_property.workspace = true
understory_property_binding.workspace = true
understory_responder = { workspace = true, features = [
  "box_tree_adapter",
  "hit2d_adapter",
  "std",
] }
understory_style.workspace = true
understory_timing.workspace = true
understory_transcript = { workspace = true, features = ["std"] }
understory_virtual_list = { workspace = true, features = ["std"] }
