[package]
name = "understory_animation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed animation timing, effects, and target-stack sampling primitives."
readme = "README.md"
keywords = ["ui", "animation", "effects", "no_std", "understory"]
categories = ["gui", "no-std"]

[features]
default = ["libm"]
libm = ["kurbo/libm", "understory_motion/libm"]
std = ["kurbo/std", "understory_motion/std"]

[dependencies]
kurbo.workspace = true
understory_animation_timeline.workspace = true
understory_motion.workspace = true
understory_timing.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
