[package]
name = "understory_axis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Headless numeric axis scale and tick primitives for Understory."
keywords = ["ui", "axis", "scale", "no_std", "understory"]
categories = ["gui", "data-structures", "no-std"]

[dependencies]

[lints]
workspace = true

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
