[package]
name = "understory_box_decoration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Renderer-neutral box decoration geometry primitives."
readme = "README.md"
keywords = ["box", "css", "geometry", "graphics", "ui"]
categories = ["graphics", "gui", "no-std"]

[features]
default = ["libm"]
std = ["kurbo/std"]
libm = ["dep:libm", "kurbo/libm"]

[dependencies]
kurbo.workspace = true
libm = { version = "0.2", optional = true, default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
