[package]
name = "understory_display"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Retained display list primitives between widget/runtime state and paint backends"
readme = "README.md"
keywords = ["display", "render-tree", "scene", "understory"]
categories = ["graphics", "gui", "data-structures"]

[features]
default = []
std = ["parley/std", "parley/system"]

[dependencies]
kurbo.workspace = true
peniko.workspace = true
parley.workspace = true

[lints]
workspace = true
