[package]
name = "understory_guide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Headless 2D guide geometry primitives for Understory."
keywords = ["ui", "guide", "geometry", "no_std", "understory"]
categories = ["gui", "graphics", "no-std"]

[dependencies]
kurbo.workspace = true
understory_axis = { path = "../understory_axis", default-features = false }

[lints]
workspace = true

[features]
default = ["std"]
std = ["kurbo/std", "understory_axis/std"]
libm = ["kurbo/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
