[package]
name = "understory_motion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure motion value, timing, and interpolation primitives for Forest UI runtimes."
readme = "README.md"
keywords = ["ui", "motion", "animation", "no_std", "understory"]
categories = ["gui", "no-std"]

[features]
default = ["libm"]
libm = ["kurbo/libm", "peniko/libm"]
std = ["kurbo/std", "peniko/std"]

[dependencies]
kurbo.workspace = true
peniko.workspace = true
understory_timing.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
