[package]
name = "understory_node_graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless node-graph document, projection, session, and derived-state primitives"
readme = "README.md"
keywords = ["graph", "node-graph", "ui", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
hashbrown.workspace = true
invalidation.workspace = true
kurbo.workspace = true
understory_selection.workspace = true
understory_view2d.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["kurbo/std", "understory_view2d/std"]
libm = ["kurbo/libm", "understory_view2d/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
