[package]
name = "understory_property"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WPF/WinUI-style dependency property system with layered value resolution"
keywords = ["property", "dependency", "ui", "framework", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
hashbrown.workspace = true
invalidation.workspace = true
smallvec.workspace = true

[lints]
workspace = true

[features]
default = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
