[package]
name = "understory_property_binding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Small one-way property binding primitives for Understory"
readme = "README.md"
keywords = ["binding", "property", "ui", "framework", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
hashbrown.workspace = true
invalidation.workspace = true
understory_property.workspace = true

[lints]
workspace = true

[features]
default = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
