[package]
name = "understory_style"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Style and theme resolution for understory dependency properties"
keywords = ["style", "theme", "ui", "framework", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
invalidation.workspace = true
understory_property = { path = "../understory_property" }

[lints]
workspace = true

[features]
default = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
