[package]
name = "understory_timeline_model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Validated headless timeline document and edit primitives."
keywords = ["ui", "timeline", "profiler", "no_std", "understory"]
categories = ["gui", "data-structures", "no-std"]

[dependencies]

[lints]
workspace = true

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
