[package]
name = "understory_timing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-agnostic timer queue primitives."
readme = "README.md"
keywords = ["ui", "timing", "timer", "no_std", "understory"]
categories = ["gui", "data-structures", "no-std"]

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
