[package]
name = "understory_transcript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Append-order transcript primitives with generic payloads and explicit updates for chat, shell, and agent-style interaction logs."
keywords = ["transcript", "chat", "agent", "shell", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
hashbrown.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
