[package]
name = "understory_virtual_list"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core 1D virtualization primitives for dense index strips."
keywords = ["ui", "virtualization", "list", "no_std", "understory"]
categories = ["gui", "data-structures", "no-std"]

[dependencies]

[lints]
workspace = true

[features]
default = ["std"]

# This crate is `no_std` + `alloc` by default; `std` is only needed when
# dependants prefer to compile with the standard library.
std = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
